if (NOT MSVC AND WITH_OPENCV AND WITH_OPENMP)
  find_package(OpenCV REQUIRED)

  include_directories(${ANN_INCLUDE_DIRS})

  if(OpenCV_VERSION VERSION_GREATER 2.1.0)
    add_executable(scan2segments scan2segments.cc ../slam6d/fbr/fbr_global.cc)
    if(MSVC)
      target_link_libraries(scan2segments scan_static ${ANN_LIBRARIES_STATIC} fbr_cv_io_shared fbr_panorama_shared fbr_feature_shared fbr_feature_matcher_shared fbr_registration_shared ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${OpenCV_LIBS} ${SHOW_LIBS_SHARED})
    else()
      target_link_libraries(scan2segments scan_shared ${ANN_LIBRARIES_SHARED} fbr_cv_io_shared fbr_panorama_shared fbr_feature_shared fbr_feature_matcher_shared fbr_registration_shared ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${OpenCV_LIBS} ${SHOW_LIBS_SHARED})
    endif()
  else()
    message("OpenCV Version > 2.2 required for scan2segmentation")
  endif()
  add_executable(fhsegmentation fhsegmentation.cc FHGraph.cc disjoint-set.cc segment-graph.cc)
  if (MSVC)
    target_link_libraries(fhsegmentation scan_static ${ANN_LIBRARIES_STATIC} ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${OpenCV_LIBS})
  else()
    target_link_libraries(fhsegmentation scan_shared ${ANN_LIBRARIES_SHARED} ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${OpenCV_LIBS})
  endif()
  
  add_executable(graph_cut_segmentation graph_cut/graph_cut.cc graph_cut/util.cc graph_cut/blob_color.cc)
  target_link_libraries(graph_cut_segmentation scan_shared fbr_panorama_shared fbr_cv_io_shared newmat ${ANN_LIBRARIES_SHARED} ${OpenCV_LIBS} ${FBR_LIBS} ${SHOW_LIBS_SHARED} ${Boost_LIBRARIES})
endif()
