set(SHOW_LIBS glui scan ${ANN_LIBRARIES} newmat ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} CACHE INTERNAL "")
if (WIN32 OR CYGWIN)
  set(SHOW_LIBS_S glui scan_s ann_s newmat_s ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
elseif(APPLE)
  set(SHOW_LIBS_S glui scan_s ann newmat_s ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
else()
  set(SHOW_LIBS_S glui_s scan_s ann newmat ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
endif()

if(WITH_GLEE)
  message(STATUS "Using opengl extensions")
  set(SHOW_LIBS ${SHOW_LIBS} glee)
  set(SHOW_LIBS_S ${SHOW_LIBS_S} glee_s)
  add_definitions(-DWITH_GLEE)
else()
  message(STATUS "Not using opengl extensions")
endif()

add_library(show_objects OBJECT NurbsPath.cc  PathGraph.cc vertexarray.cc  viewcull.cc colormanager.cc compacttree.cc scancolormanager.cc display.cc show_common.cc show_menu.cc show_gl.cc show_animate.cc)

if(WITH_FREEGLUT)
  message(STATUS "With freeglut")
  add_definitions(-DWITH_FREEGLUT)
else()
  message(STATUS "Without freeglut")
endif()

if(WITH_COMPACT_OCTREE)
  message(STATUS "Using compact octrees")
  add_definitions(-DUSE_COMPACT_TREE)
else()
  message(STATUS "Not using compact octreees: Warning uses more memory")
endif()

if (WITH_SHOW)
  add_executable(show show.cc $<TARGET_OBJECTS:show_objects>)
  target_link_libraries(show ${SHOW_LIBS})
endif()

if(WITH_WXSHOW)
  add_executable(wxshow wxshow.cc selectionframe.cc $<TARGET_OBJECTS:show_objects>)
  target_link_libraries(wxshow ${wxWidgets_LIBRARIES} wxthings ${SHOW_LIBS})
endif()

add_library(showstatic STATIC $<TARGET_OBJECTS:show_objects>)

### EXPORT SHARED LIBS 
if(EXPORT_SHARED_LIBS)
  add_library(show_s SHARED $<TARGET_OBJECTS:show_objects>)
  target_link_libraries(show_s ${Boost_LIBRARIES} ${SHOW_LIBS_S})
endif()
